--- a/index.html
+++ b/index.html
@@ -35,11 +35,10 @@
     />
   </head>
 
-
   <body>
     <!-- =============================================================
       ====================== HEADER SECTION ======================== -->
-     <!-- NAVBAR --> 
+    <!-- NAVBAR -->
     <nav class="nav container transparent z-depth-0" role="navigation">
       <div class="nav-wrapper">
         <a id="logo-container" href="#" class="brand-logo right profession"
@@ -66,13 +65,21 @@
 
         <!-- SIDEBAR (MOBILE)= -->
         <ul id="nav-mobile" class="sidenav sidebar">
-          <li class="amber accent-1 center z-depth-2"><a href="#!" class="white-text"><b>JOHN PANDAS</b></a></li>
-          <li><a class="waves-effect" href="./index.html">Inicio</a></li>
-          <li><a class="waves-effect" href="./pages/formation.html">Educación</a></li>
-          <li>
-            <a class="waves-effect" href="./pages/experience.html">Experiencia</a>
+          <li class="amber accent-2 center z-depth-2">
+            <a href="#!" class="white-text"><b>JOHN PANDAS</b></a>
           </li>
-          <li><a class="waves-effect" href="./pages/contact.html">Contacto</a></li>
+          <li><a class="waves-effect" href="./index.html">Inicio</a></li>
+          <li>
+            <a class="waves-effect" href="./pages/formation.html">Educación</a>
+          </li>
+          <li>
+            <a class="waves-effect" href="./pages/experience.html"
+              >Experiencia</a
+            >
+          </li>
+          <li>
+            <a class="waves-effect" href="./pages/contact.html">Contacto</a>
+          </li>
         </ul>
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"
           ><i class="material-icons amber-text">menu</i></a
@@ -108,7 +115,6 @@
     <!-- =============================================================
     ======================== MAIN CONTENT ============================ -->
     <main class="center">
-
       <!-- MI SECTION -->
       <section class="section section-about border white z-depth-2">
         <div class="row container">
@@ -120,47 +126,53 @@
               <h5 class="center">Sobre mí</h5>
 
               <p class="about-text">
-                ¡Hola! soy <span class="amber-text text-accent-2">John</span> y tengo 35 años. Me encanta trabajar en proyectos desafiantes que me permitan
-                explorar nuevas tecnologías y solucionar problemas complejos de
-                manera eficiente. Además, disfruto colaborando con otros
-                desarrolladores para crear soluciones innovadoras que puedan
-                marcar la diferencia. Siempre estoy abierto a nuevas
+                ¡Hola! soy <span class="amber-text text-accent-2">John</span> y
+                tengo 35 años. Me encanta trabajar en proyectos desafiantes que
+                me permitan explorar nuevas tecnologías y solucionar problemas
+                complejos de manera eficiente. Además, disfruto colaborando con
+                otros desarrolladores para crear soluciones innovadoras que
+                puedan marcar la diferencia. Siempre estoy abierto a nuevas
                 oportunidades y desafíos, ¡así que no dudes en contactarme si
                 quieres hablar sobre un proyecto emocionante!
               </p>
             </div>
           </div>
 
-          <div class="col s12 m6">
-            <div class="icon-block">
-              <h2 class="center amber-text text-accent-1">
-                <i class="material-icons">group</i>
-              </h2>
-              <h5 class="center">User Experience Focused</h5>
+          <div class="col s12 m12 divider"></div>
+          <div class="col s12 m12"><h6>Soft Skills</h6></div>
 
-              <p class="">
-                By utilizing elements and principles of Material Design, we were
-                able to create a framework that incorporates components and
-                animations that provide more feedback to users. Additionally, a
-                single underlying responsive system across all platforms allow
-                for a more unified user experience.
-              </p>
+          <div class="col s3 m3 container">
+            <div class="icon-block">
+              <h2 class="center amber-text text-lighten-3">
+                <i class="material-icons icon-skill-icon">emoji_objects</i>
+              </h2>
+              <h5 class="center icon-skill">Creativo</h5>
             </div>
           </div>
 
-          <div class="col s12 m6">
+          <div class="col s3 m3 container">
             <div class="icon-block">
-              <h2 class="center amber-text text-accent-1">
-                <i class="material-icons">settings</i>
+              <h2 class="center amber-text text-lighten-3">
+                <i class="material-icons icon-skill-icon">flash_on</i>
               </h2>
-              <h5 class="center">Easy to work with</h5>
+              <h5 class="center icon-skill">Rápido Aprendizaje</h5>
+            </div>
+          </div>
+          <div class="col s3 m3 container">
+            <div class="icon-block">
+              <h2 class="center amber-text text-lighten-3">
+                <i class="material-icons icon-skill-icon">diversity_3</i>
+              </h2>
+              <h5 class="center icon-skill">Colaborativo</h5>
+            </div>
+          </div>
 
-              <p class="">
-                We have provided detailed documentation as well as specific code
-                examples to help new users get started. We are also always open
-                to feedback and can answer any questions a user may have about
-                Materialize.
-              </p>
+          <div class="col s3 m3 container">
+            <div class="icon-block">
+              <h2 class="center amber-text text-lighten-3">
+                <i class="material-icons icon-skill-icon">sync</i>
+              </h2>
+              <h5 class="center icon-skill">Resiliente</h5>
             </div>
           </div>
         </div>
@@ -169,64 +181,55 @@
       <!--  EDUCACIÓN Y EXPERIENCIA -->
       <section class="border container">
         <div class="row">
-          <div class="col s12 m12">
+
+          <div class="col s6 m6">
             <div class="icon-block">
               <h2 class="center green-text text-lighten-3">
-                <i class="material-icons">badge</i>
+                <i class="material-icons">terminal</i>
               </h2>
-              <h5 class="center">Speeds up development</h5>
+              <h5 class="center">Back End</h5>
+              <p class="col s12 m12 center card transparent">+5 Años</p>
 
-              <p class="">
-                We did most of the heavy lifting for you to provide a default
-                stylings that incorporate our custom components. Additionally,
-                we refined animations and transitions to provide a smoother
-                experience for developers.
-              </p>
+              <div class="row col s12 m12">
+                <ul class="collection transparent">
+                  <li class="collection-item transparent">Python</li>
+                  <li class="collection-item transparent">Django</li>
+                  <li class="collection-item transparent">SQL</li>
+                  <li class="collection-item transparent">Docker</li>
+                </ul>
+              </div>
             </div>
           </div>
 
-          <div class="col s12 m6">
+          <div class="col s6 m6">
             <div class="icon-block">
               <h2 class="center light-blue-text text-lighten-3">
-                <i class="material-icons">group</i>
+                <i class="material-icons">developer_mode</i>
               </h2>
-              <h5 class="center">User Experience Focused</h5>
+              <h5 class="center">Front End</h5>
+              <p class="col s12 m12 center card transparent">+1 Año</p>
 
-              <p class="">
-                By utilizing elements and principles of Material Design, we were
-                able to create a framework that incorporates components and
-                animations that provide more feedback to users. Additionally, a
-                single underlying responsive system across all platforms allow
-                for a more unified user experience.
-              </p>
-            </div>
-          </div>
+              <div class="row col s12 m12">
+                <ul class="collection transparent">
+                  <li class="collection-item transparent">HTML</li>
+                  <li class="collection-item transparent">CSS</li>
+                  <li class="collection-item transparent">ReactJS</li>
+                  <li class="collection-item transparent">Materialize</li>
+                </ul>
+              </div>
 
-          <div class="col s12 m6">
-            <div class="icon-block">
-              <h2 class="center red-text text-lighten-3">
-                <i class="material-icons">settings</i>
-              </h2>
-              <h5 class="center">Easy to work with</h5>
-
-              <p class="">
-                We have provided detailed documentation as well as specific code
-                examples to help new users get started. We are also always open
-                to feedback and can answer any questions a user may have about
-                Materialize.
-              </p>
             </div>
           </div>
         </div>
+        <div>
+          <a href="./pages/experience.html" class="waves-effect amber-waves btn-flat btn-small center">Ver experiencia</a>
+        </div>
       </section>
-
-      <!--   SECCIÓN SKILLS-->
-      <section class="section z-depth-2">adfsgdfhjmj,k</section>
     </main>
 
     <!--===================================================
       ===================== FOOTER =====================-->
-    <footer class="page-footer footer blue-grey darken-2">
+    <footer class="page-footer footer blue-grey darken-2 z-depth-2">
       <div class="container">
         <div class="row">
           <div class="col l6 s12">
@@ -236,30 +239,76 @@
               a disposición. ¡No dudes en contactarme en cualquiera de mis
               métodos de contacto!
             </p>
+            <p class="grey-text text-lighten-4 light">
+              Lomas de Zamora, Gran Buenos Aires,
+              cp1834
+            </p>
           </div>
           <div class="col l3 s6">
             <h5 class="white-text">Navegación</h5>
             <ul>
-              <li><a class="white-text" target="_blank" href="./index.html">Inicio</a></li>
-              <li><a class="white-text" target="_blank" href="./pages/formation.html">Formación</a></li>
-              <li><a class="white-text" target="_blank" href="./pages/experience.html">Experiencia</a></li>
-              <li><a class="white-text" target="_blank" href="./pages/contact.html">Contacto</a></li>
+              <li>
+                <a class="white-text" target="_blank" href="./index.html"
+                  >Inicio</a
+                >
+              </li>
+              <li>
+                <a
+                  class="white-text"
+                  target="_blank"
+                  href="./pages/formation.html"
+                  >Formación</a
+                >
+              </li>
+              <li>
+                <a
+                  class="white-text"
+                  target="_blank"
+                  href="./pages/experience.html"
+                  >Experiencia</a
+                >
+              </li>
+              <li>
+                <a
+                  class="white-text"
+                  target="_blank"
+                  href="./pages/contact.html"
+                  >Contacto</a
+                >
+              </li>
             </ul>
           </div>
           <div class="col l3 s6">
             <h5 class="white-text">Conectemos</h5>
             <ul>
-              <li><a class="white-text" href="tel:XXX-XXX-XXXX">Teléfono</a></li>
-              <li><a class="white-text" href="./pages/contact.html#mailme">Mail</a></li>
-              <li><a class="white-text" href="https://wa.me/+1100000000">whatsapp</a></li>
-              <li><a class="white-text" href="https://twitter.com/search?q=develop&src=typed_query&f=top" target="_blank">Twitter</a></li>
+              <li>
+                <a class="white-text" href="tel:XXX-XXX-XXXX">Teléfono</a>
+              </li>
+              <li>
+                <a class="white-text" href="./pages/contact.html#mailme"
+                  >Mail</a
+                >
+              </li>
+              <li>
+                <a class="white-text" href="https://wa.me/+1100000000"
+                  >whatsapp</a
+                >
+              </li>
+              <li>
+                <a
+                  class="white-text"
+                  href="https://twitter.com/search?q=develop&src=typed_query&f=top"
+                  target="_blank"
+                  >Twitter</a
+                >
+              </li>
             </ul>
           </div>
         </div>
       </div>
       <div class="footer-copyright center">
         <div class="container center">
-          Powered by 
+          Powered by
           <a class="pink-text text-lighten-1" href="http://materializecss.com"
             >Materialize
           </a>
@@ -268,21 +317,22 @@
       <div class="footer-copyright center">
         <div class="container center">
           Design by
-          <a class="blue-text text-darken-2" href=""
-            >J.P. Esparza</a
-          >
+          <a class="blue-text text-darken-2" href="">J.P. Esparza</a>
         </div>
       </div>
       <div class="footer-copyright center">
         <div class="container center">
           <p class="amber-text text-daken-2">Repo del proyecto</p>
           <a class="" href="https://github.com/Jesparzarom/CurriculumWeb"
-            ><img src="./images/ico/github.png" width="100px" alt="" class="ghrepo"></a
-          >
+            ><img
+              src="./images/ico/github.png"
+              width="100px"
+              alt=""
+              class="ghrepo"
+          /></a>
         </div>
       </div>
     </footer>
-
 
     <!--===================================================
     ================ FIXED ACTIONS BUTTON ================-->
@@ -314,11 +364,10 @@
       </ul>
     </div>
 
-      <!--===================================================
+    <!--===================================================
       ===================== SCRIPTS =====================-->
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="js/materialize.js"></script>
     <script src="js/init.js"></script>
-
   </body>
 </html>
