--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 <i class="material-icons">terminal</i>
               </h2>
               <h5 class="center">Back End</h5>
-              <p class="col s12 m12 center card transparent">+5 Años</p>
+              <p class="col s12 m12 center">+5 Años</p>
 
               <div class="row col s12 m12">
                 <ul class="collection transparent">
@@ -207,7 +207,7 @@
                 <i class="material-icons">developer_mode</i>
               </h2>
               <h5 class="center">Front End</h5>
-              <p class="col s12 m12 center card transparent">+1 Año</p>
+              <p class="col s12 m12 center">+1 Año</p>
 
               <div class="row col s12 m12">
                 <ul class="collection transparent">
@@ -222,10 +222,14 @@
           </div>
         </div>
         <div>
-          <a href="./pages/experience.html" class="waves-effect amber-waves btn-flat btn-small center">Ver experiencia</a>
+          <a href="./pages/experience.html" class="waves-effect amber-waves amber accent-2 btn-small center">Más</a>
         </div>
       </section>
     </main>
+    <div class="center prev-nex container">
+      <div class="divider"></div>
+      <a href="./pages/formation.html" class="waves-effect amber-waves btn-flat btn-small center">Siguiente</a>
+    </div>
 
     <!--===================================================
       ===================== FOOTER =====================-->
