--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,6 +5,7 @@
   <!-- ==================== METAS ======================= -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta http-equiv="refresh" content="10">
   
   <!-- ==================== FAVICON ======================= -->
   <link rel="icon" type="image/png" href="../images/ico/contact.png" />
@@ -138,6 +139,7 @@
 
           <div class="card-action center">
             <a 
+            href="./thankyou.html"
             class="btn center waves-effect hoverable center" 
             id="enviar-form">
             Enviar mensaje
@@ -148,6 +150,11 @@
       </div>
     </div>
   </main>
+
+  <div class="center prev-nex container">
+    <div class="divider"></div>
+    <a href="./experience.html" class="waves-effect amber-waves btn-flat btn-small center">Volver</a>
+  </div>
 
 
   <!-- ========== FLOATING BUTTON ======================= -->
