--- a/pages/experience.html
+++ b/pages/experience.html
@@ -149,6 +149,11 @@
         </table>
       </section>
     </main>
+    <div class="center prev-nex container">
+      <div class="divider"></div>
+      <a href="./formation.html" class="waves-effect amber-waves btn-flat btn-small center">Volver</a>
+      <a href="./contact.html" class="waves-effect amber-waves btn-flat btn-small center">Siguiente</a>
+    </div>
 
    <!-- ========== FLOATING BUTTON ======================= -->
   <div class="oculto fixed-action-btn" id="floatbtn">
