--- a/pages/formation.html
+++ b/pages/formation.html
@@ -142,7 +142,15 @@
             </div>
           </div>
         </div>
+      </section>
     </main>
+
+    
+    <div class="center prev-nex container">
+      <div class="divider"></div>
+      <a href="../index.html" class="waves-effect amber-waves btn-flat btn-small center">Volver</a>
+      <a href="./experience.html" class="waves-effect amber-waves btn-flat btn-small center">Siguiente</a>
+    </div>
 
 
     <!-- ========== FLOATING BUTTON ======================= -->
